# OxideSpace

./: .env.example  .env.local  .gitignore  ANALIZ_RAPORU.md  CALISTIRMA_VE_API.md  CONTEXT_API_FINAL.md  CONTEXT_API_IMPLEMENTATION.md  CONTEXT_API_KAYNAKLAR.md  DETAYLI_ANALIZ.md  EKSIKLER_VE_IYILESTIRMELER.md  HOW_TO_RUN.md  PENPOT_KANAL_ENTEGRASYONU.md  PENPOT_OXIDESPACE_ENTEGRASYON.md  PROJE_DURUMU.md  SETUP.md  TAURI_SETUP.md  TEST_ARKADAS_ILE.md  TEST_SES_MENU.md  UYGULAMA_PLANI_VE_TEST.md  VERCEL_DEPLOY.md  VERCEL_DEPLOY_ADIMADIM.md  index.html  mcp-config-example.json  package-lock.json  package.json  playwright.config.ts  setup-mcp.ps1  setup-mcp.sh  tailwind.config.js  tauri-build.bat  tauri-dev.bat  tsc_output.txt  vite.config.ts
docs/: COLORS.md  KRISP_VE_SES_GURULTU.md  WINDOWS_CODE_SIGNING.md
scripts/: copy-setup.mjs  tauri-build.mjs  tauri-dev.mjs
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddFriendView.tsx  AppUpdateBanner.tsx  Auth.tsx  CanvasChannelView.tsx  ChatArea.tsx  DmCallView.tsx  ErrorBoundary.tsx  IncomingCallModal.tsx  LandingPage.tsx  Sidebar.tsx  SortableChannelItem.tsx  UsernameSetup.tsx  VoiceChannelControls.tsx
src/contexts/: MessageContext.tsx  ServerContext.tsx  UIContext.tsx  UserContext.tsx  VoiceContext.tsx  index.ts
src/hooks/: index.ts  (+9 more)
supabase/: README.md  config.toml
tests/: TEST_NASIL_CALISTIRILIR.md  smoke.spec.ts
updates/: README.md  latest.json
(+33 files in other folders)
