[package]
name = "oxide-app"
version = "0.1.0"
description = "Oxide App - Discord benzeri ses/sohbet uygulaması"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
